// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyDisplay Component should match default snapshot 1`] = `
<div>
  <div
    class="mm-box currency-display-component mm-box--display-flex mm-box--flex-wrap-wrap mm-box--align-items-center"
    title="null"
  >
    <span
      class="mm-box mm-text currency-display-component__text mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
    />
  </div>
</div>
`;

exports[`CurrencyDisplay Component should render text with a className 1`] = `
<div>
  <div
    class="mm-box currency-display-component currency-display mm-box--display-flex mm-box--flex-wrap-wrap mm-box--align-items-center"
    title="$123.45"
  >
    <span
      class="mm-box mm-text currency-display-component__text mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
    >
      $123.45
    </span>
  </div>
</div>
`;

exports[`CurrencyDisplay Component should render text with a prefix 1`] = `
<div>
  <div
    class="mm-box currency-display-component currency-display mm-box--display-flex mm-box--flex-wrap-wrap mm-box--align-items-center"
    title="-$123.45"
  >
    <span
      class="mm-box mm-text currency-display-component__text mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
    >
      -
      $123.45
    </span>
  </div>
</div>
`;
